# LinuxPracticeProjects

./: CLCooridinator.cpp  CMakeLists.txt  README.md  build.sh  main.cpp  new_feature.txt
CLFileSortTaskPublisher/: CLFileSortTaskPublisher.h  build.sh  main.txt
CLFileSortTaskPublisher/CLFileDataSorter/: CLDataSorter.h
CLFileSortTaskPublisher/CLFileReadManager/: CLFileReadManager.cpp
CLFileSortTaskPublisher/CLSortedFileMerger/: CLSortedFileMerger.h  main.txt
CLThreadPool/: CLThreadPool.cpp  CLThreadPool.h
my_thread_cpp/: Makefile  README.md  main.cpp  my_condition.cpp  my_condition.h  my_futex_utils.h  my_mutex.cpp  my_mutex.h  my_platform.h  my_thread.cpp  my_thread.h
snippet/MainProgram/: CMakeLists.txt
snippet/TemporaryTest/: CMakeLists.txt
src/: CLCooridinator.cpp  CLCooridinator.h  CLDataSorter.cpp  CLFileReadManager.h  CLFileSortTaskPublisher.cpp  CLFileSortTaskPublisher.h  CLSortedFileMerger.cpp  CLSortedFileMerger.h  CLThreadPool.cpp  CLThreadPool.h  CLThreadPool.tpp
test/: CMakeLists.txt  temporary_test.cpp
